Refactored to use isBlank() method.